spiral/opentelemetry-python/charts/templates/jaeger-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    meta.helm.sh/release-name: flask-test
  labels:
    app.kubernetes.io/managed-by: Helm 
  name: jaeger
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: jaeger
      app.kubernetes.io/name: jaeger
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jaeger
        app.kubernetes.io/instance: jaeger
        app.kubernetes.io/managed-by: Helm
    spec:
      containers:
        - args:
            - --memory.max-traces=5000
            - --prometheus.server-url=http://prometheus:9090
            - --prometheus.query.normalize-calls=true
            - --prometheus.query.normalize-duration=true
          image: jaegertracing/all-in-one:1.57
          name: jaeger
          ports:
            - containerPort: 16686
              protocol: TCP
            - containerPort: 4317
              protocol: TCP
            - containerPort: 4318
              protocol: TCP
