spiral/opentelemetry-python/charts/templates/otelcol-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    meta.helm.sh/release-name: flask-test
  labels:
    app.kubernetes.io/managed-by: Helm 
  name: otelcol
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: otelcol
      app.kubernetes.io/name: otelcol
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: otelcol
        app.kubernetes.io/instance: otelcol
        app.kubernetes.io/managed-by: Helm
    spec:
      containers:
        - args:
            - --config=/etc/otel-collector-config.yml
            - ""
          image: otel/opentelemetry-collector-contrib:0.102.1
          name: otelcol
          ports:
            - containerPort: 4317
              protocol: TCP
            - containerPort: 4318
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/otel-collector-config.yml
              name: otelcol-configmap-volume
              subPath: otel-collector-config.yml
      volumes:
        - configMap:
            items:
              - key: otel-collector-config.yml
                path: otel-collector-config.yml
            name: otelcol-configmap
          name: otelcol-configmap-volume
