spiral/opentelemetry-python/charts/templates/flask-test-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: flask-test
    meta.helm.sh/release-namespace: default
  labels:
    app.kubernetes.io/instance: flask-test
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: flask-test
    app.kubernetes.io/version: 1.16.0
    helm.sh/chart: flask-test-0.1.0
  name: flask-test
  namespace: default
spec:  
  ports:
  - name: http
    port: 5000
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: flask-test
    app.kubernetes.io/name: flask-test
  type: ClusterIP
