spiral/opentelemetry-python/charts/templates/jaeger-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: fask-test
  labels:
    app.kubernetes.io/managed-by: Helm
  name: jaeger
  namespace: default
spec:
  ports:
    - name: "16686"
      port: 16686
      targetPort: 16686
    - name: "4317"
      port: 4317
      targetPort: 4317
    - name: "4318"
      port: 4318
      targetPort: 4318
  selector:
    app.kubernetes.io/instance: jaeger
    app.kubernetes.io/name: jaeger
  type: ClusterIP
