spiral/opentelemetry-python/charts/templates/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: flask-test
  labels:
    app.kubernetes.io/managed-by: Helm 
  name: prometheus
spec:
  ports:
    - name: "9090"
      port: 9090
      targetPort: 9090
  selector:
    app.kubernetes.io/instance: prometheus
    app.kubernetes.io/name: prometheus
  type: ClusterIP
